# advent-of-code-2022

./: README.md  pyproject.toml
01/: main.py
02/: main.py
03/: main.py
04/: main.py
05/: main.py
06/: main.py
07/: main.py
08/: main.py
09/: main.py
10/: main.py
11/: main.py
12/: main.py
13/: main.py
14/: main.py
15/: main.py
16/: main.py
18/: main.py
scripts/command/: new.sh
